Fixed overflowing card body

--- a/src/Components/Card/card.css
+++ b/src/Components/Card/card.css
@@ -21,8 +21,6 @@
   display: inline-block;
   display: flex;
   min-height: 8rem;
-  width: 100%;
-  height: 100%;
   padding-left: 2rem;
   padding-right: 2rem;
   padding-bottom: 2rem;
